//package rina.smcbac.messages;
package rina.messages;
option optimize_for = LITE_RUNTIME;
import "ApplicationProcessNamingInfoMessage.proto";

// message newApplicationProcessNamingInfo_t {         // carries the naming information of an application process
//         required string applicationProcessName = 1;
//         optional string applicationProcessInstance = 2;
//         optional string applicationEntityName = 3;
//         optional string applicationEntityInstance = 4;
// }

message smCapability_t {
        optional string ressource = 1;
        optional string operation = 2;
}

message smCbacToken_t {
        
        required uint32 token_id = 1; /*unsigned short*/
        required uint32 ipcp_issuer_id = 2; /*unsigned short*/
        required rina.messages.applicationProcessNamingInfo_t ipcp_holder_name = 3;
        required string audience = 4;
        required uint32 issued_time = 5; /*int*/
        required uint32 token_nbf = 6;
        required uint32 token_exp = 7;
        repeated smCapability_t token_cap = 18;
        //required string token_sign = 19; 
}

message smCbacTokenPlusSign_t {
        
        required smCbacToken_t token = 1;
        required string token_sign = 2; 
}